added gallery section

--- a/styles/components/buttons.sass
+++ b/styles/components/buttons.sass
@@ -6,6 +6,7 @@ button, .button
   font-weight: 600 
   font-family: $font-primary
   cursor: pointer
+  box-shadow: 4px 4px 10px 0px rgba(255, 157, 10, 0.25)
 
 .btn-small 
   height: 40px
