--- a/styles/global/global.sass
+++ b/styles/global/global.sass
@@ -25,6 +25,7 @@ header
   align-items: center
   background: url('../../img/bg-header.png')
   background-repeat: no-repeat
+  background-position: center
   background-size: cover
 
   h1 
@@ -42,6 +43,7 @@ header
 
   button 
     position: relative
+    box-shadow: none
 
 header:before 
   position: absolute
@@ -76,3 +78,58 @@ header:before
     width: 50%
     height: auto
     box-shadow: 12px 15px 20px 0px rgba(0, 0, 0, 0.15)
+
+.section-2
+  margin-bottom: 100px
+
+  h2 
+    margin-bottom: 50px
+
+  .gallery 
+    display: grid 
+    grid-template-columns: repeat(4, 1fr)
+    gap: 40px
+    align-items: center
+    width: 100%
+    margin-bottom: 60px
+
+    .img-card 
+      height: 370px
+      position: relative
+      // min-width: 200px
+
+      .img-card-text
+        position: absolute
+        bottom: 0
+        padding: 0 20px 30px 20px
+        color: $cWhite
+
+    .img-card:before 
+      position: absolute 
+      content: ''
+      height: 100%
+      width: 100%
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      background: linear-gradient(180deg, rgba(35, 35, 35, 0.00) 59.71%, rgba(0, 0, 0, 0.80) 100%)
+
+    .img-card1 
+      background: url('../../../img/gallery1.png')
+
+    .img-card2
+      background: url('../../../img/gallery2.png')
+
+    .img-card3 
+      background: url('../../../img/gallery3.png')
+
+    .img-card4 
+      background: url('../../../img/gallery4.png')
+
+  button 
+    margin: 0 auto 
+    display: block
+
+.section-3 
+  background: red
