--- a/styles/components/navigation.sass
+++ b/styles/components/navigation.sass
@@ -16,34 +16,38 @@
     margin: 0 auto
     padding: 0 15px
 
-    .nav-logo 
-      font-size: 25px
+  .nav-logo 
+    font-size: 25px
+    color: $cWhite
+    font-weight: 600
+
+  .nav-links 
+    list-style: none 
+    display: flex
+    gap: 32px 
+
+    a 
       color: $cWhite
-      font-weight: 600
+      font-size: 16px
 
-    .nav-links 
-      list-style: none 
-      display: flex
-      gap: 32px 
+  .icon-hamburger 
+    display: none
+    height: 22px
+    width: 30px
+    flex-direction: column 
+    justify-content: space-between
+    margin: 0 10px
+    cursor: pointer
+    padding: 3px
 
-      a 
-        color: $cWhite
-        font-size: 16px
+    div 
+      height: 2px
+      width: 100%
+      background: $cWhite
 
-    .icon-hamburger 
-      display: none
-      height: 22px
-      width: 30px
-      flex-direction: column 
-      justify-content: space-between
-      margin: 0 10px
-      cursor: pointer
-      padding: 3px
-
-      div 
-        height: 2px
-        width: 100%
-        background: $cWhite
+  button 
+    box-shadow: none
+  
 
 
 @media screen and (max-width: 768px) 
