--- a/styles/global/global.sass
+++ b/styles/global/global.sass
@@ -96,7 +96,8 @@ header:before
     .img-card 
       height: 370px
       position: relative
-      // min-width: 200px
+      background-repeat: no-repeat !important
+      background-size: cover !important
 
       .img-card-text
         position: absolute
@@ -132,4 +133,60 @@ header:before
     display: block
 
 .section-3 
-  background: red
+  position: relative
+  width: 100%
+  margin-bottom: 100px
+
+  .email-alert 
+    position: relative
+    background: url('../../../img/email.png')
+    height: 500px
+    display: flex 
+    align-items: center
+    padding: 0 80px
+
+  .email-alert:before 
+    position: absolute 
+    content: ''
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    width: 100%
+    height: 100%
+    background: linear-gradient(68deg, #100F29 0%, rgba(16, 15, 41, 0.79) 33.97%, rgba(16, 15, 41, 0.00) 100%)
+
+  .email-details 
+    position: relative
+
+    h3, p 
+      color: $cWhite 
+
+    h3 
+      margin-bottom: 30px
+      font-weight: 500
+      span 
+        font-size: 35px
+
+    p 
+      margin-bottom: 30px
+
+
+    .form-group 
+      width: 100% 
+      display: flex
+      align-items: center
+
+      input 
+        width: 100%
+        height: 50px
+        padding: 0 180px 0 20px
+        outline: none
+        border: none
+
+      button 
+        transform: translateX(-100%)
+        width: 160px
+        height: 50px
+        box-shadow: none
+        font-weight: 300
