--- a/styles/main.css
+++ b/styles/main.css
@@ -267,24 +267,68 @@ header:before {
 .section-3 .email-details p {
   margin-bottom: 30px;
 }
-.section-3 .email-details .form-group {
+.section-3 .form-group {
   width: 100%;
   display: flex;
   align-items: center;
 }
-.section-3 .email-details .form-group input {
+.section-3 .form-group input {
   width: 100%;
   height: 50px;
   padding: 0 180px 0 20px;
   outline: none;
   border: none;
 }
-.section-3 .email-details .form-group button {
+.section-3 .form-group button {
   transform: translateX(-100%);
   width: 160px;
   height: 50px;
   box-shadow: none;
   font-weight: 300;
+}
+
+footer {
+  height: 275px;
+  display: flex;
+  align-items: center;
+  background: #3A3A3A;
+}
+footer .footer-top {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 35px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  margin-bottom: 30px;
+}
+footer .footer-top .footer-links, footer .footer-top .footer-icons {
+  display: flex;
+  list-style: none;
+}
+footer .footer-top .footer-links {
+  gap: 45px;
+}
+footer .footer-top .footer-links a {
+  color: #fff;
+}
+footer .footer-top .footer-icons {
+  gap: 25px;
+}
+footer .footer-bottom .privacy-links {
+  display: flex;
+  list-style: none;
+  gap: 15px;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+footer .footer-bottom .privacy-links a {
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 600;
+  font-size: 12px;
+}
+footer .footer-bottom p {
+  text-align: center;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 12px;
 }
 
 @media screen and (max-width: 900px) {
