added mobile menu

--- a/styles/components/navigation.sass
+++ b/styles/components/navigation.sass
@@ -48,7 +48,47 @@
   button 
     box-shadow: none
   
+.menu-overlay 
+  display: none
+  position: absolute
+  height: 100vh
+  width: 100%
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  background: rgba($cBlack, .7)
 
+  .close 
+    display: block
+    width: 100%
+    margin-bottom: 30px
+
+    img 
+      display: block
+      height: 30px
+      width: 30px
+      margin-left: auto
+
+  .menu-container 
+    width: 280px
+    height: 100%
+    background: $cWhite
+    margin-left: auto
+    padding: 20px
+
+    ul 
+      list-style: none
+      
+      li 
+        margin-bottom: 10px
+
+      a 
+        color: $cGray
+        font-size: 18px
+
+.open-menu 
+  display: block
 
 @media screen and (max-width: 768px) 
   .navbar 
