--- a/styles/global/global.sass
+++ b/styles/global/global.sass
@@ -3,6 +3,15 @@
   padding: 0
   box-sizing: border-box
   // outline: 1px solid red
+  scroll-behavior: smooth
+
+body 
+  position: relative
+  background: white
+
+main 
+  background: white
+  padding-top: 100px
 
 .container 
   max-width: 1180px
@@ -27,6 +36,7 @@ header
   background-repeat: no-repeat
   background-position: center
   background-size: cover
+
 
   h1 
     position: relative
@@ -58,7 +68,7 @@ header:before
   opacity: 0.3
 
 .section-1 
-  margin: 130px 0
+  margin-bottom: 130px
   width: 100%
 
   .d-flex 
