--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ button, .button {
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -33,6 +33,8 @@ button, .button {
   width: 100%;
   display: flex;
   align-items: center;
+  transition: all 0.2s;
+  z-index: 10;
 }
 .navbar .navbar-container {
   display: flex;
@@ -77,7 +79,7 @@ button, .button {
 
 .menu-overlay {
   display: none;
-  position: absolute;
+  position: fixed;
   height: 100vh;
   width: 100%;
   top: 0;
@@ -85,6 +87,7 @@ button, .button {
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.7);
+  z-index: 100;
 }
 .menu-overlay .close {
   display: block;
@@ -117,6 +120,19 @@ button, .button {
 
 .open-menu {
   display: block;
+}
+
+.is-scroll {
+  background: #fff;
+}
+.is-scroll .nav-logo {
+  color: #000;
+}
+.is-scroll .icon-hamburger div {
+  background: #000;
+}
+.is-scroll .nav-links a {
+  color: #000;
 }
 
 @media screen and (max-width: 768px) {
